--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,32 @@
         <docker.image.prefix>springcommunity</docker.image.prefix>
 
     </properties>
-
+    <repositories>
+       <repository>
+         <id>mavenfeed</id>
+         <url>https://pkgs.dev.azure.com/kayalvizinataraj1520/mavenartifact/_packaging/mavenfeed/maven/v1</url>
+         <releases>
+         <enabled>true</enabled>
+         </releases>
+         <snapshots>
+         <enabled>true</enabled>
+         </snapshots>
+       </repository>
+    </repositories>
+    
+    <distributionManagement>
+       <repository>
+          <id>mavenfeed</id>
+          <url>https://pkgs.dev.azure.com/kayalvizinataraj1520/mavenartifact/_packaging/mavenfeed/maven/v1</url>
+          <releases>
+          <enabled>true</enabled>
+          </releases>
+          <snapshots>
+          <enabled>true</enabled>
+          </snapshots>
+        </repository> 
+    </distributionManagement>
+    
     <dependencyManagement>
         <dependencies>
             <dependency>
