--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,7 +18,7 @@ variables:
   environmentName: 'maven-java'
 
   # Agent VM image name
-  name: 'MyAgentPool'
+  vmImageName: 'ubuntu-latest'
 
 stages:
 - stage: Build
@@ -27,7 +27,7 @@ stages:
   - job: MavenPackageAndPublishArtifacts
     displayName: Maven Package and Publish Artifacts
     pool:
-      vmImage: $(vmImageName)
+      name: 'MyAgentPool'
 
     steps:
     - task: Maven@3
@@ -54,7 +54,7 @@ stages:
     displayName: Deploy Linux Web App
     environment: $(environmentName)
     pool:
-      vmImage: $(vmImageName)
+      name: 'MyAgentPool'
     strategy:
       runOnce:
         deploy:
